# JALAL

./: CMakeLists.txt  README.md
JALAL/src/: Jalal.cpp  JalalConfig.h.in
